added image modals

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>TITLE</title>
+    <title>Nagy Ádám Tamás Portfolio</title>
     <!-- <link rel="stylesheet" media="screen and (min-width: 769px)" href="./index.css" /> -->
     <link rel="stylesheet" href="./index.css" />
 </head>
@@ -45,9 +45,12 @@
         <div class="empty"></div>
         <div class="title">CONTACT</div>
         <div class="text">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor officia error commodi obcaecati quam? Eaque fugit illum nostrum error ex voluptatum consectetur dicta, possimus consequuntur. Illum sunt quos quisquam a!</p></div>
+            <p><a href=mailto:"nagy.adam.tamas@gmail.com">email</a></p>
+            <p><a href="tel:06202617055">tel</a></p>
         <div class="empty"></div>
     </section>
+
+    <div id="modals_hidden"></div>
 
 <script src="database.js"></script>
 </body>
