--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 
 <head>
     <meta charset="utf-8" />
@@ -12,11 +12,10 @@
 
 <body>
 
-
     <nav id="div_header">
-        <a href="#section_about" class="link">ABOUT</a>
-        <a href="#section_portfolio" class="link">PORTFOLIO</a>
-        <a href="#section_contact" class="link">CONTACT</a>
+        <a href="#section_about" class="link">RÓLAM</a>
+        <a href="#section_portfolio" class="link">PORTFÓLIÓ</a>
+        <a href="#section_contact" class="link">KAPCSOLAT</a>
     </nav>
 
     <div id="div_picture">
@@ -24,7 +23,7 @@
 
     <section class="content" id="section_about">
         <div class="empty"></div>
-        <div class="title">ABOUT</div>
+        <div class="title">RÓLAM</div>
         <div class="text">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor officia error commodi obcaecati quam? Eaque fugit illum nostrum error ex voluptatum consectetur dicta, possimus consequuntur. Illum sunt quos quisquam a! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor officia error commodi obcaecati quam? Eaque fugit illum nostrum error ex voluptatum consectetur dicta, possimus consequuntur. Illum sunt quos quisquam a! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor officia error commodi obcaecati quam? Eaque fugit illum nostrum error ex voluptatum consectetur dicta, possimus consequuntur. Illum sunt quos quisquam a! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor officia error commodi obcaecati quam? Eaque fugit illum nostrum error ex voluptatum consectetur dicta, possimus consequuntur. Illum sunt quos quisquam a! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor officia error commodi obcaecati quam? Eaque fugit illum nostrum error ex voluptatum consectetur dicta, possimus consequuntur. Illum sunt quos quisquam a! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor officia error commodi obcaecati quam? Eaque fugit illum nostrum error ex voluptatum consectetur dicta, possimus consequuntur. Illum sunt quos quisquam a!</p></div>
         <div class="empty"></div>
@@ -32,7 +31,7 @@
 
     <section class="content" id="section_portfolio">
         <div class="empty"></div>
-        <div class="title">PORTFOLIO</div>
+        <div class="title">PORTFÓLIÓ</div>
         <div class="text">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor officia error commodi obcaecati quam? Eaque fugit illum nostrum error ex voluptatum consectetur dicta, possimus consequuntur. Illum sunt quos quisquam a! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor officia error commodi obcaecati quam? Eaque fugit illum nostrum error ex voluptatum consectetur dicta, possimus consequuntur. Illum sunt quos quisquam a! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor officia error commodi obcaecati quam? Eaque fugit illum nostrum error ex voluptatum consectetur dicta, possimus consequuntur. </p> <p> Illum sunt quos quisquam a! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor officia error commodi obcaecati quam? Eaque fugit illum nostrum error ex voluptatum consectetur dicta, possimus consequuntur. Illum sunt quos quisquam a! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor officia error commodi obcaecati quam? Eaque fugit illum nostrum error ex voluptatum consectetur dicta, possimus consequuntur. Illum sunt quos quisquam a! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor officia error commodi obcaecati quam? Eaque fugit illum nostrum error ex voluptatum consectetur dicta, possimus consequuntur. Illum sunt quos quisquam a!</p>
             <div id="articles_container">
@@ -43,16 +42,17 @@
 
     <section class="content" id="section_contact">
         <div class="empty"></div>
-        <div class="title">CONTACT</div>
+        <div class="title">KAPCSOLAT</div>
         <div class="text">
-            <p><a href=mailto:"nagy.adam.tamas@gmail.com">email</a></p>
-            <p><a href="tel:06202617055">tel</a></p>
+            <h2><a href=mailto:"nagy.adam.tamas@gmail.com">email: nagy.adam.tamas@gmail.com</a></h2>
+            <h2><a href="tel:06202617055">telefon: 0620 / 261 7055</a></h2>
         <div class="empty"></div>
     </section>
 
     <div id="modals_hidden"></div>
 
-<script src="database.js"></script>
 </body>
+
+<script src="database.js"></script>
 
 </html>
