--- a/index.html
+++ b/index.html
@@ -25,7 +25,22 @@
         <div class="empty"></div>
         <div class="title">RÓLAM</div>
         <div class="text">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor officia error commodi obcaecati quam? Eaque fugit illum nostrum error ex voluptatum consectetur dicta, possimus consequuntur. Illum sunt quos quisquam a! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor officia error commodi obcaecati quam? Eaque fugit illum nostrum error ex voluptatum consectetur dicta, possimus consequuntur. Illum sunt quos quisquam a! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor officia error commodi obcaecati quam? Eaque fugit illum nostrum error ex voluptatum consectetur dicta, possimus consequuntur. Illum sunt quos quisquam a! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor officia error commodi obcaecati quam? Eaque fugit illum nostrum error ex voluptatum consectetur dicta, possimus consequuntur. Illum sunt quos quisquam a! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor officia error commodi obcaecati quam? Eaque fugit illum nostrum error ex voluptatum consectetur dicta, possimus consequuntur. Illum sunt quos quisquam a! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor officia error commodi obcaecati quam? Eaque fugit illum nostrum error ex voluptatum consectetur dicta, possimus consequuntur. Illum sunt quos quisquam a!</p></div>
+            <p>A nevem Nagy Ádám Tamás, szülőhelyem és otthonom Budapest.</p>
+            <p>Gimnáziumot az ELTE Radnóti Miklós Gyakorlóiskolában, egyetemet az ELTE Bölcsészettudományi és Pedagógiai-Pszochológiai Karán végeztem. Azóta dolgoztam tanárként, utómunkáztam greenbox fotókat, csináltam termékfotózást és dolgoztam két adatbázison a Forum Hungaricum Kft. (korábban a Magyar Nemzeti Digitális Archívum része), az Országos Széchényi Könyvtár és az ELTE együttműködésében. De a munkámmal csaknem azonos fontosságúnak tartom a hobbiprojektjeimet, amikben szórakozás mellett a tudásomat is megmutathatom.</p>
+            <br />
+            <p>KÉSZSÉGEK</p>
+            <ul>
+                <li>Angol nyelv (társalgási szinten)</li>
+                <li>Webfejlesztés (folyamatban, jelenleg csak front-end): HTML, CSS, JS, jQuery, React</li>
+                <li>Felhasználói szintű számítógépes ismeretek: Windows, MS Office, kevés Linux; VS Code, Git</li>
+                <li>Kép-, videó- és zeneszerkesztési ismeretek és tapasztalat</li>
+                <li>Tapasztalat laptopok szerelésében (alkatrészcsere, pasztázás, szoftveres hibaelhárítás)</li>
+                <li>15 éves gyakorlat hanganyagok gépelésében</li>
+                <li>Fotózás (nem vagyok profi szinten, de csináltam már termékfotózást)</li>
+            </ul>
+            <p>A kreatív önkifejezés végigkísérte az életemet -- miután regényírói karrieremről lemondtam tizenöt évesen, rajzok, majd a zeneszerzés következett, amit jelenleg is űzök több stílusban is, az elektronikus zenéktől a progresszív metálig. A webfejlesztés tanulása közben néhány kisebb játékot is készítettem.</p>
+            <p>Jelenleg szabadidőmben főleg a zenekarommal -- egy szimfonikus csellómetált játszó együttessel, a Leecherrel -- foglalkozom, ahol a közös munkához honlappal, arculattal, fotószerkesztéssel, videóvágással és zeneszerzéssel járulok hozzá, de például egy egyedi zenekari társasjátékot is készítettem már, ami bétateszt után 2019-ben nyomtatott, dizájnnal ellátott prototípust fog kapni.</p>
+        </div>
         <div class="empty"></div>
     </section>
 
@@ -33,7 +48,6 @@
         <div class="empty"></div>
         <div class="title">PORTFÓLIÓ</div>
         <div class="text">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor officia error commodi obcaecati quam? Eaque fugit illum nostrum error ex voluptatum consectetur dicta, possimus consequuntur. Illum sunt quos quisquam a! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor officia error commodi obcaecati quam? Eaque fugit illum nostrum error ex voluptatum consectetur dicta, possimus consequuntur. Illum sunt quos quisquam a! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor officia error commodi obcaecati quam? Eaque fugit illum nostrum error ex voluptatum consectetur dicta, possimus consequuntur. </p> <p> Illum sunt quos quisquam a! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor officia error commodi obcaecati quam? Eaque fugit illum nostrum error ex voluptatum consectetur dicta, possimus consequuntur. Illum sunt quos quisquam a! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor officia error commodi obcaecati quam? Eaque fugit illum nostrum error ex voluptatum consectetur dicta, possimus consequuntur. Illum sunt quos quisquam a! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor officia error commodi obcaecati quam? Eaque fugit illum nostrum error ex voluptatum consectetur dicta, possimus consequuntur. Illum sunt quos quisquam a!</p>
             <div id="articles_container">
             </div>
         </div>
@@ -46,6 +60,7 @@
         <div class="text">
             <h2><a href=mailto:"nagy.adam.tamas@gmail.com">email: nagy.adam.tamas@gmail.com</a></h2>
             <h2><a href="tel:06202617055">telefon: 0620 / 261 7055</a></h2>
+            <h2><a href="https://github.com/kutor?tab=repositories">GitHub</a></h2>
         <div class="empty"></div>
     </section>
 
