--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>Nagy Ádám Tamás Portfolio</title>
     <!-- <link rel="stylesheet" media="screen and (min-width: 769px)" href="./index.css" /> -->
     <link rel="stylesheet" href="./index.css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
 </head>
 
 <body>
@@ -23,10 +24,10 @@
 
     <section class="content" id="section_about">
         <div class="empty"></div>
-        <div class="title">RÓLAM</div>
+        <div class="title"><p><strong>RÓLAM</strong></p></div>
         <div class="text">
             <p>A nevem Nagy Ádám Tamás, szülőhelyem és otthonom Budapest.</p>
-            <p>Gimnáziumot az ELTE Radnóti Miklós Gyakorlóiskolában, egyetemet az ELTE Bölcsészettudományi és Pedagógiai-Pszochológiai Karán végeztem. Azóta dolgoztam tanárként, utómunkáztam greenbox fotókat, csináltam termékfotózást és dolgoztam két adatbázison a Forum Hungaricum Kft. (korábban a Magyar Nemzeti Digitális Archívum része), az Országos Széchényi Könyvtár és az ELTE együttműködésében. De a munkámmal csaknem azonos fontosságúnak tartom a hobbiprojektjeimet, amikben szórakozás mellett a tudásomat is megmutathatom.</p>
+            <p>Gimnáziumot az ELTE Radnóti Miklós Gyakorlóiskolában, egyetemet az ELTE Bölcsészettudományi és Pedagógiai-Pszichológiai Karán végeztem. Azóta dolgoztam tanárként, utómunkáztam greenbox fotókat, csináltam termékfotózást és dolgoztam két adatbázison a Forum Hungaricum Kft. (korábban a Magyar Nemzeti Digitális Archívum része), az Országos Széchényi Könyvtár és az ELTE együttműködésében. De a munkámmal csaknem azonos fontosságúnak tartom a hobbiprojektjeimet, amikben szórakozás mellett a tudásomat is megmutathatom.</p>
             <br />
             <p>KÉSZSÉGEK</p>
             <ul>
@@ -38,15 +39,15 @@
                 <li>15 éves gyakorlat hanganyagok gépelésében</li>
                 <li>Fotózás (nem vagyok profi szinten, de csináltam már termékfotózást)</li>
             </ul>
-            <p>A kreatív önkifejezés végigkísérte az életemet -- miután regényírói karrieremről lemondtam tizenöt évesen, rajzok, majd a zeneszerzés következett, amit jelenleg is űzök több stílusban is, az elektronikus zenéktől a progresszív metálig. A webfejlesztés tanulása közben néhány kisebb játékot is készítettem.</p>
-            <p>Jelenleg szabadidőmben főleg a zenekarommal -- egy szimfonikus csellómetált játszó együttessel, a Leecherrel -- foglalkozom, ahol a közös munkához honlappal, arculattal, fotószerkesztéssel, videóvágással és zeneszerzéssel járulok hozzá, de például egy egyedi zenekari társasjátékot is készítettem már, ami bétateszt után 2019-ben nyomtatott, dizájnnal ellátott prototípust fog kapni.</p>
+            <p>A kreatív önkifejezés végigkísérte az életemet: miután regényírói karrieremről lemondtam tizenöt évesen, rajzok, majd a zeneszerzés következett, amit jelenleg is űzök több stílusban is, az elektronikus zenéktől a progresszív metálig. A webfejlesztés tanulása közben néhány kisebb játékot is készítettem.</p>
+            <p>Jelenleg szabadidőmben főleg a zenekarommal – egy szimfonikus csellómetált játszó együttessel, a Leecherrel – foglalkozom, ahol a közös munkához honlappal, arculattal, fotószerkesztéssel, videóvágással és zeneszerzéssel járulok hozzá, de például egy egyedi zenekari társasjátékot is készítettem már, ami bétateszt után 2019-ben nyomtatott, dizájnnal ellátott prototípust fog kapni.</p>
         </div>
         <div class="empty"></div>
     </section>
 
     <section class="content" id="section_portfolio">
         <div class="empty"></div>
-        <div class="title">PORTFÓLIÓ</div>
+        <div class="title"><p><strong>PORTFÓLIÓ</strong></p></div>
         <div class="text">
             <div id="articles_container">
             </div>
@@ -56,11 +57,10 @@
 
     <section class="content" id="section_contact">
         <div class="empty"></div>
-        <div class="title">KAPCSOLAT</div>
+        <div class="title"><p><strong>KAPCSOLAT</strong></p></div>
         <div class="text">
             <h2><a href=mailto:"nagy.adam.tamas@gmail.com">email: nagy.adam.tamas@gmail.com</a></h2>
             <h2><a href="tel:06202617055">telefon: 0620 / 261 7055</a></h2>
-            <h2><a href="https://github.com/kutor?tab=repositories">GitHub</a></h2>
         <div class="empty"></div>
     </section>
 
