--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <li>Kép-, videó- és zeneszerkesztési ismeretek és tapasztalat</li>
                 <li>Tapasztalat laptopok szerelésében (alkatrészcsere, pasztázás, szoftveres hibaelhárítás)</li>
                 <li>15 éves gyakorlat hanganyagok gépelésében</li>
-                <li>Fotózás (nem vagyok profi szinten, de csináltam már termékfotózást)</li>
+                <li>Fotózás, termékfotózás</li>
             </ul>
             <p>A kreatív önkifejezés végigkísérte az életemet: miután regényírói karrieremről lemondtam tizenöt évesen, rajzok, majd a zeneszerzés következett, amit jelenleg is űzök több stílusban is, az elektronikus zenéktől a progresszív metálig. A webfejlesztés tanulása közben néhány kisebb játékot is készítettem.</p>
             <p>Jelenleg szabadidőmben főleg a zenekarommal – egy szimfonikus csellómetált játszó együttessel, a Leecherrel – foglalkozom, ahol a közös munkához honlappal, arculattal, fotószerkesztéssel, videóvágással és zeneszerzéssel járulok hozzá, de például egy egyedi zenekari társasjátékot is készítettem már, ami bétateszt után 2019-ben nyomtatott, dizájnnal ellátott prototípust fog kapni.</p>
