--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
                 <li>Fotózás, termékfotózás</li>
                 <li>Adminisztráció, rendszerezés</li>
             </ul>
+            <p><a href="./cv/nagy_adam_tamas_onelet_kep.pdf"> Részletesen: Önéletrajz (PDF) </a></p>
+           
             <p>A kreatív önkifejezés végigkísérte az életemet: miután regényírói karrieremről lemondtam tizenöt évesen, rajzok, majd a zeneszerzés következett, amit jelenleg is űzök több stílusban is, az elektronikus zenéktől a progresszív metálig. A webfejlesztés tanulása közben néhány kisebb játékot is készítettem.</p>
             <p>Jelenleg szabadidőmben főleg a zenekarommal – egy szimfonikus csellómetált játszó együttessel, a Leecherrel – foglalkozom, ahol a közös munkához honlappal, arculattal, fotószerkesztéssel, videóvágással és zeneszerzéssel járulok hozzá, de például egy egyedi zenekari társasjátékot is készítettem már, ami bétateszt után 2019-ben nyomtatott, dizájnnal ellátott prototípust fog kapni.</p>
         </div>
